done: Fix styling for mobile view to display divs correctly, fix issue with footer colliding with sign up button, fix footer copyright and bottom menu overlapping each other; todo: Add another media query for larger screen devices like tablets

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ html,body{
     margin: 0 !important;
     padding: 0 !important;
     overflow-x: hidden;
-    overflow-y: hidden;
     font-family: Roboto;
 }
 
@@ -50,6 +49,7 @@ h4{
 .logo{
   width: 100px;
   height: 100px;
+  padding-left: 20px;
 }
 
 .top-menu{
@@ -62,8 +62,17 @@ h4{
   text-decoration: none;
   color: white;
   padding: 20px;
+  padding-bottom: 0px !important;
   font-size: 1.5em;
 }
+
+.top-menu a:hover {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2)
+  transition: all 200ms ease-out;
+}
+
+
+
 
 .container {
   display: inline-block;
@@ -151,11 +160,11 @@ button{
 
 footer {
    position: absolute;
+   left: 0;
    bottom:0;
    width:100%;
    height:60px;   /* Height of the footer */
-   display:inline-block;
-   left: 0;
+   /* display:inline-block; */
 }
 
 .copyright{
@@ -185,14 +194,13 @@ footer {
     margin-top: 10%;
     display: inline-block;
     width: 100%;
-    min-height: 100%;
   }
 
   .content{
     float: none !important;
-    padding: 0;
+    padding-right: 10px;
     margin: auto;
-    margin-bottom: 150px;
+    margin-bottom: 170px;
     width: 300px;
     display: inline-block !important;
   }
@@ -207,21 +215,37 @@ footer {
     width: 300px;
     height:200px;
     /* border: 1px yellow solid; */
-    padding-right: 10%;
     display: inline-block !important;
+    margin-bottom: 30px;
   }
 
   .signup.right{
     float: none !important;
   }
 
+  form{
+    padding-left: 10%;
+  }
+
+  .signup-terms{
+  }
+
+  .signup-terms a{
+  }
+
   .copyright{
     font-size: .5rem;
+    left: 0;
+    width: 100%;
+    position: relative;
   }
 
   .bottom-menu{
-    padding-right: 20px;
+    /* padding-right: 20px; */
     font-size: .4rem;
+    right: 0;
+    height: 30px;
+    width: 100%;
   }
 
   .bottom-menu a{
@@ -232,11 +256,15 @@ footer {
   }
 
   footer {
-     bottom:0;
      /* width: 100%; */
-     height:60px;   /* Height of the footer */
-     margin-top: 300px;
-     display: inline-block !important;
-     left: 0;
+     bottom:0;
+     margin-top: 10px;
+     height: 60px;
+     position: relative !important;
+     /* display: flex !important; */
+  }
+
+  .container {
+    padding-top: 20px;
   }
 }
